added png images for Chrome support

--- a/strange-wheels.html
+++ b/strange-wheels.html
@@ -11,11 +11,10 @@
 	<script type="text/javascript" src="draw.js"></script>
   </head>
   <body>
-  <div id="EmptyHeader"></div>
 	<div id="WheelDiv">
     	<canvas id="WheelCanvas" width="560" height="400" />
 	</div>
-	<div id="WheelDiv">
+	<div id="RoadDiv">
     	<canvas id="RoadCanvas" width="400" height="400" />
 	</div>
 	<script type="text/javascript" src="main.js"></script>
